--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,9 @@ h1 {
 }
 
 #app {
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -81,6 +84,16 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+input {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  border-color: #242424;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -93,4 +106,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 300px;
 }
