--- a/src/style.css
+++ b/src/style.css
@@ -95,22 +95,13 @@ input {
   border-color: #242424;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
-
 .btn-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 300px;
+}
+
+.hide-me {
+  background-color: #550000;
 }
